--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start -H 0.0.0.0 -p ${PORT:-8080}"
   },
   "dependencies": {
+    "bootstrap": "4.0.0",
     "next": "10.0.8",
     "react": "17.0.1",
     "react-dom": "17.0.1",
