--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "bootstrap": "4.0.0",
+    "es6-promise": "^4.2.8",
+    "isomorphic-fetch": "^3.0.0",
     "next": "10.0.8",
     "react": "17.0.1",
     "react-dom": "17.0.1",
