--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bootstrap": "4.0.0",
+    "cookie": "^0.4.1",
     "es6-promise": "^4.2.8",
     "isomorphic-fetch": "^3.0.0",
     "js-cookie": "^2.2.1",
