--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start -H 0.0.0.0 -p ${PORT:-8080}"
   },
   "dependencies": {
+    "atob": "^2.1.2",
     "bootstrap": "4.0.0",
     "cookie": "^0.4.1",
     "es6-promise": "^4.2.8",
@@ -19,6 +20,9 @@
     "sass": "^1.32.8"
   },
   "devDependencies": {
+    "@types/atob": "^2.1.2",
+    "@types/cookie": "^0.4.0",
+    "@types/js-cookie": "^2.2.6",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "typescript": "^4.2.3"
