--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start -H 0.0.0.0 -p ${PORT:-8080}"
   },
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
     "atob": "^2.1.2",
     "bootstrap": "4.0.0",
     "cookie": "^0.4.1",
@@ -17,7 +19,8 @@
     "next": "10.0.8",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "sass": "^1.32.8"
+    "react-hooks-global-state": "^1.0.1",
+    "sass": "^1.34.1"
   },
   "devDependencies": {
     "@types/atob": "^2.1.2",
