--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hooks-global-state": "^1.0.1",
+    "react-masonry-component": "^6.2.1",
+    "react-masonry-layout": "^0.4.0",
     "sass": "^1.34.1"
   },
   "devDependencies": {
