--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start -H 0.0.0.0 -p ${PORT:-8080}"
   },
   "dependencies": {
+    "@types/nprogress": "^0.2.0",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "atob": "^2.1.2",
@@ -18,6 +19,7 @@
     "isomorphic-fetch": "^3.0.0",
     "js-cookie": "^2.2.1",
     "next": "10.0.8",
+    "nprogress": "^0.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hooks-global-state": "^1.0.1",
