--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "isomorphic-fetch": "^3.0.0",
     "js-cookie": "^2.2.1",
     "next": "10.0.8",
+    "next-images": "^1.4.0",
+    "node-sass": "^4.14.1",
     "nprogress": "^0.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hooks-global-state": "^1.0.1",
     "react-masonry-component": "^6.2.1",
     "react-masonry-layout": "^0.4.0",
-    "sass": "^1.34.1"
+    "sass": "^1.34.1",
+    "webpack": "^4.46.0"
   },
   "devDependencies": {
     "@types/atob": "^2.1.2",
