--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "js-cookie": "^2.2.1",
     "next": "10.0.8",
     "next-images": "^1.4.0",
+    "next-seo": "^4.26.0",
     "node-sass": "^4.14.1",
     "nprogress": "^0.2.0",
     "react": "17.0.1",
